# openblok

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LANGUAGES.md  README.md  THEMES.md
.circleci/: config.yml
.github/workflows/: build_linux.yml  (+3 more)
cmake/: AppendCXXFlagIfSupported.cmake  CPackConfig.cmake  CheckMakeUnique.cmake  EnableWarnings.cmake  ProjectVersion.cmake  RequireCxx11.cmake  RequireCxxStd.cmake  SetDefaultBuildType.cmake  TryAddingCompilerFlag.cmake
data/: gamecontrollerdb_2010.txt  gamecontrollerdb_209
etc/: emscripten.html  emscripten.patch
examples/: CMakeLists.txt
locale/: .gitignore  CMakeLists.txt  main.pot
src/: CMakeLists.txt  main.cpp  version.h.in
src/game/: Animation.h  AppContext.cpp  AppContext.h  BattleAttackTable.cpp  BattleAttackTable.h  CMakeLists.txt  CommonResources.cpp  CommonResources.h  DurationToString.h  GameBoard.cpp  GameBoard.h  GameConfigFile.cpp  GameConfigFile.h  GameState.cpp  GameState.h  InitState.cpp  InitState.h  MainMenuState.cpp  MainMenuState.h  Matrix.h  Mino.cpp  Mino.h  MinoFactory.cpp  MinoFactory.h  Piece.cpp  Piece.h  PieceFactory.cpp  PieceQueue.cpp  PlayerStatistics.h  Resources.h  ScoreTable.cpp  ScoreTable.h  SysConfig.h  Theme.cpp  Theme.h  Timing.h  Transition.h  Well.cpp  Well.h  WellConfig.h  (+1 more)
src/game/components/: GameplayResources.cpp  GameplayResources.h  HoldQueue.cpp  HoldQueue.h  Holder.cpp  Holder.h  LockDelayType.h  Mino.cpp  Mino.h  MinoFactory.cpp  MinoFactory.h  MinoStorage.cpp  MinoStorage.h  NextQueue.cpp  NextQueue.h  NextQueueDraw.cpp  NextQueueDraw.h  Piece.cpp  Piece.h  PieceDraw.cpp  PieceDraw.h  PieceFactory.cpp  PieceFactory.h  PieceQueue.cpp  PieceQueue.h  PieceType.cpp  PieceType.h  Well.cpp  Well.h  WellConfig.h
src/game/components/animations/: BattleAttack.cpp  BattleAttack.h  CellLockAnim.cpp  CellLockAnim.h  HalfHeightLineClearAnim.cpp  HalfHeightLineClearAnim.h  LineClearAnim.cpp  LineClearAnim.h  TextPopup.cpp  TextPopup.h  WellAnimation.h
src/game/components/rotations/: Classic.cpp  Classic.h  RotationFactory.cpp  RotationFactory.h  RotationFn.h  RotationStyle.h  SRS.cpp  SRS.h  TGM.cpp  TGM.h
src/game/components/singleplayer/: LeftSidebarBox.cpp  LeftSidebarBox.h  RightSidebarBox.cpp  RightSidebarBox.h  WellBox.cpp  WellBox.h
src/game/components/well/: Ascii.cpp  Ascii.h  AutoRepeat.cpp  AutoRepeat.h  Gravity.cpp  Gravity.h  Input.cpp  Input.h  LockDelay.cpp  LockDelay.h  Render.cpp  Render.h  TSpin.cpp  TSpin.h
src/game/layout/: Box.h  Button.h  MenuItem.h
src/game/layout/gameplay/: GarbageGauge.cpp  GarbageGauge.h  NarrowBattlePA.cpp  NarrowBattlePA.h  NarrowPA.cpp  NarrowPA.h  PlayerArea.cpp  PlayerArea.h  WellContainer.cpp  WellContainer.h  WidePA.cpp  WidePA.h
src/game/layout/gameplay/narrow/: BottomBarBox.cpp  BottomBarBox.h  TopBarBox.cpp  TopBarBox.h
src/game/layout/gameplay/wide/: LeftSidebarBox.cpp  LeftSidebarBox.h  RightSidebarBox.cpp  RightSidebarBox.h
src/game/layout/menu/: Button.h  Logo.cpp  Logo.h  MainMenuBtn.cpp  MainMenuBtn.h  OptionsCategory.cpp  OptionsCategory.h  PieceRain.cpp  PieceRain.h
src/game/layout/multiplayer/: BottomBarBox.cpp  BottomBarBox.h  TopBarBox.cpp  TopBarBox.h
src/game/layout/options/: CategoryBtn.cpp  CategoryBtn.h  DeviceChooser.cpp  DeviceChooser.h  InputField.cpp  InputField.h  OptionsItem.cpp  OptionsItem.h  ToggleBtn.cpp  ToggleBtn.h  ValueChooser.cpp  ValueChooser.h
src/game/layout/singleplayer/: Box.h  LeftSidebarBox.cpp  LeftSidebarBox.h  RightSidebarBox.cpp  RightSidebarBox.h  WellBox.cpp  WellBox.h
src/game/script/: ClassicRotationFn.h  DefaultRotationFn.h  RotationFn.h  ScriptLoader.cpp  ScriptLoader.h
src/game/script/lua/: LuaRotationFn.cpp  LuaRotationFn.h
src/game/states/: IngameState.cpp  IngameState.h  InitState.cpp  InitState.h  MainMenuState.cpp  MainMenuState.h  MultiplayerState.cpp  MultiplayerState.h  SinglePlayState.cpp  SinglePlayState.h
src/game/states/substates/: Ingame.h  MainMenu.h  Multiplayer.h  SinglePlayer.cpp  SinglePlayer.h
src/game/states/substates/ingame/: Countdown.cpp  Countdown.h  FadeInOut.cpp  FadeInOut.h  Gameplay.cpp  Gameplay.h  Pause.cpp  Pause.h  PlayerSelect.cpp  PlayerSelect.h  Statistics.cpp  Statistics.h  TeamSelect.cpp  TeamSelect.h
src/game/states/substates/mainmenu/: Base.cpp  Base.h  Options.cpp  Options.h
src/game/states/substates/multiplayer/: Countdown.cpp  Countdown.h  FadeInOut.cpp  FadeInOut.h  Gameplay.cpp  Gameplay.h  Pause.cpp  Pause.h  PlayerSelect.cpp  PlayerSelect.h  Statistics.cpp  Statistics.h
src/game/states/substates/singleplayer/: Gameplay.cpp  Gameplay.h  MinorStates.cpp  MinorStates.h  Statistics.cpp  Statistics.h
src/game/util/: CircularModulo.h  DurationToString.cpp  DurationToString.h
src/po/: POTFILES.in  main.pot
src/po/de/: main.po
src/po/de/LC_MESSAGES/: main.mo
src/system/: AudioContext.h  CMakeLists.txt  Color.cpp  Color.h  ConfigFile.cpp  ConfigFile.h  ConfigManager.cpp  ConfigManager.h  Event.cpp  Event.h  EventCollector.cpp  EventCollector.h  Font.h  FontManager.cpp  FontManager.h  GraphicsContext.cpp  GraphicsContext.h  InputConfigFile.cpp  InputConfigFile.h  InputEvent.cpp  InputEvent.h  InputMap.cpp  InputMap.h  Localize.cpp  Localize.h  Log.cpp  Log.h  Music.h  Paths.cpp  Paths.h  RGBColor.cpp  Rectangle.h  ResourceTypes.h  ResourceUtils.h  SoundEffect.h  Texture.h  Window.cpp  Window.h
src/system/fontconfig/: FontConfig.cpp  FontConfig.h
src/system/lua/: LuaConfigManager.cpp  LuaConfigManager.h
src/system/sdl/: SDLAudioContext.cpp  SDLAudioContext.h  SDLEventCollector.cpp  SDLEventCollector.h  SDLFont.cpp  SDLFont.h  SDLGraphicsContext.cpp  SDLGraphicsContext.h  SDLMusic.cpp  SDLMusic.h  SDLSoundEffect.cpp  SDLSoundEffect.h  SDLTexture.cpp  SDLTexture.h  SDLWindow.cpp  SDLWindow.h
src/system/util/: MakeUnique.h  Regex.h
tests/: CMakeLists.txt  README.md  TestUtils.cpp  TestUtils.h  main.cpp  test_Animation.cpp  test_Color.cpp  test_GameBoard.cpp  test_GraphicsContext.cpp  test_Piece.cpp  test_Transition.cpp  test_Well.cpp  test_WellTSpin.cpp  test_Well_TGM.cpp
(+21 files in other folders)
